# Paul

./: readme.txt
Plotty.xcodeproj/: project.pbxproj
code/Paul/src/: PLApplication.c  PLFunction.c  PLFunction.h  PLParam.c  PLParam.h  PLParamController.c  PLParamController.h  PLParamEditorController.c  PLParamEditorController.h  PLUser.c  PLWindowController.c  PLWindowController.h  main.c  main.h
code/Plotty/: CMakeLists.txt
code/Plotty/src/: Application.c  Application.h  Function.c  Function.h  FunctionDefinition.c  FunctionDefinition.h  PLApplication.c  PLApplication.h  PLFunction.c  PLFunction.h  PLParam.c  PLParamController.c  PLParamEditorController.c  PLUser.c  PLWindowController.c  Param.c  Param.h  ParamController.c  ParamController.h  ParamEditorController.c  ParamEditorController.h  PlottyUser.c  PlottyUser.h  WindowController.c  WindowController.h  main.c  main.h
